--- a/index.html
+++ b/index.html
@@ -11,26 +11,55 @@
     <link
         href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-    <header class="">
-        <div class="logo">
-            <img src="/img/image 3 1.png" alt="logo" class="headerLogo">
-        </div>
-        <div class="nav">
-            <a href="#" class="Primary">Цены прокат</a>
-            <a href="#">Акции</a>
-            <a href="#">Аренда</a>
-            <a href="#">Трасса</a>
-            <a href="#">Соревнования</a>
-            <a href="#">Школа</a>
-            <a href="#">Гоночная команда</a>
-            <a href="#">Продажа картингов</a>
+    <header class="container">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="/img/image 3 1.png" alt="" width="194px" height="112px">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto  mb-2 mb-lg-0">
+                            <li class="nav-item me-3">
+                                <a class="nav-link_active" aria-current="page" href="#">Цены прокат</a>
+                            </li>
+                            <li class="nav-item me-3">
+                                <a class="nav-link" href="#">Акции</a>
+                            </li>
+                            <li class="nav-item me-3">
+                                <a class="nav-link" href="#">Аренда<a>
+                            </li>
+                            <li class="nav-item me-3">
+                                <a class="nav-link" href="#">Трасса</a>
+                            </li>
+                            <li class="nav-item me-3">
+                                <a class="nav-link" href="#">Школа</a>
+                            </li>
+                            <li class="nav-item me-3">
+                                <a class="nav-link" href="#">Гоночная команда</a>
+                            </li>
+                            <li class="nav-itemme-3">
+                                <a class="nav-link" href="#">Продажа картингов</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
     </header>
+
     <section class="hero">
 
         <div class="container">
@@ -342,6 +371,10 @@
         </div>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
