--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -81,20 +82,28 @@
     </section>
     <section class="cart">
         <div class="container">
-            <div class="headerCarts">
-                <div class="Carts">
-                    Carts
+            <div class="row headerCarts">
+                <div class="col md-3">
+                    <div class="Carts">
+                        Carts
+                    </div>
                 </div>
-                <div class="the_fastest">
-                    the fastest
+                <div class="col md-3">
+                    <div class="the_fastest">
+                        the fastest
+                    </div>
                 </div>
-                <div class="cartsLine">
+                <div class="col md-3">
+                    <div class="cartsLine">
+                    </div>
                 </div>
-                <div class="FeaturesRus">
+                <div class="col md-3">
+                    <div class="FeaturesRus">
                     Карты
                 </div>
+                </div>
             </div>
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col">
                     <img src="/img/cart4.png" class="cart1img" alt="cart1">
                     <h4 class="cart1_title">
@@ -126,16 +135,24 @@
     </section>
     <section class="booking">
         <div class="container">
-            <div class="booking_title">
-                <h4 class="bookingHeader">
-                    Забронировать</h4>
-                <div class="bookingLine">
+            <div class="row booking_title">
+                <div class="col md-3">
+                    <h4 class="bookingHeader">
+                        Забронировать</h4>
                 </div>
-                <div class="bookingOneclick">
-                    one click
+                <div class="col md-3">
+                    <div class="bookingLine">
+                    </div>
                 </div>
-                <div class="bookingBooking">
-                    Booking
+                <div class="col md-3">
+                    <div class="bookingOneclick">
+                        one click
+                    </div>
+                </div>
+                <div class="col md-3">
+                    <div class="bookingBooking">
+                        Booking
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -182,17 +199,25 @@
     </section>
     <section class="features">
         <div class="container">
-            <div class="headerFeatures">
-                <div class="Features">
-                    Features
+            <div class="row headerFeatures">
+                <div class="col">
+                    <div class="Features">
+                        Features
+                    </div>
                 </div>
-                <div class="our_features">
-                    our features
+                <div class="col">
+                    <div class="our_features">
+                        our features
+                    </div>
                 </div>
-                <div class="featuresLine">
+                <div class="col">
+                    <div class="featuresLine">
+                    </div>
                 </div>
-                <div class="FeaturesRus">
-                    Особенности
+                <div class="col">
+                    <div class="FeaturesRus">
+                        Особенности
+                    </div>
                 </div>
             </div>
             <div class="options1">
