Адаптировал под мобильный bootstrap

--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
                 </div>
                 <div class="col md-3">
                     <div class="FeaturesRus">
-                    Карты
-                </div>
+                        Карты
+                    </div>
                 </div>
             </div>
-            <div class="row align-items-center">
-                <div class="col">
+            <div class="row">
+                <div class="col md-4">
                     <img src="/img/cart4.png" class="cart1img" alt="cart1">
                     <h4 class="cart1_title">
                         Двухместный
                     </h4>>
                 </div>
-                <div class="col">
+                <div class="col md-4">
                     <img src="/img/cart3png.png" class="cart2img" alt="cart2">
                     <h4 class="cart2_title">
                         Взрослый
@@ -124,7 +124,7 @@
                         Ограничения: по росту - от 150 см., по весу - до 115 кг.
                     </p>
                 </div>
-                <div class="col">
+                <div class="col md-4">
                     <img src="/img/cart2.png" class="cart3img" alt="cart3">
                     <h4 class="cart3_title">
                         Детский
@@ -169,7 +169,6 @@
                 <div class="col-md-8">
                 </div>
             </div>
-
             <div class="row bookingSection">
                 <div class="col-md-2">
                     <div class="trasse">
@@ -186,16 +185,12 @@
                     <div class="secDescription">
                         Среднее время круга
                     </div>
-
                 </div>
                 <div class="col-md-7 offset-md-1">
                     <button class="bookingBtn">Бронировать</button>
-
                 </div>
             </div>
         </div>
-
-
     </section>
     <section class="features">
         <div class="container">
@@ -306,24 +301,28 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
     </section>
     <section class="contacts">
         <div class="container">
-            <div class="row">
+            <div class="row headerContact">
                 <div class="col">
-                    <div class="headerContact">
-                        <div class="contact">
-                            Контакты
-                        </div>
-                        <div class="contactLine">
-                        </div>
-                        <div class="contactWritetous">
-                            write to us
-                        </div>
+                    <div class="contact">
+                        Контакты
                     </div>
+                </div>
+                <div class="col">
+                    <div class="contactLine">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="contactWritetous">
+                        write to us
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col md-6">
                     <div class="contactItem">
                         <div class="addres">
                             <h5>
@@ -346,9 +345,8 @@
                             Заказать звонок
                         </button>
                     </div>
-
                 </div>
-                <div class="col">
+                <div class="col md-6">
                     <div class="map">
                         <img src="/img/map.png" alt="map">
                     </div>
