--- a/index.html
+++ b/index.html
@@ -357,24 +357,44 @@
     <footer>
         <div class="container">
             <div class="footerNavigation">
-                <div class="footerlogo">
-                    <img src="/img/image 3 1.png" alt="logo" class="footerLogoImg">
-                    <p>
-                        It is a long established fact that a reader will be distracted
-                        by the readable content of a page when looking at its
-                        layout.
-                    </p>
-                </div>
-                <div class="navFooter">
-                    <a href="#" class="Primary">Цены прокат</a>
-                    <a href="#">Акции</a>
-                    <a href="#">Аренда</a>
-                    <a href="#">Трасса</a>
-                    <a href="#">Соревнования</a>
-                    <a href="#">Школа</a>
-                    <a href="#">Гоночная команда</a>
-                    <a href="#">Продажа картингов</a>
-                </div>
+                <nav class="navbar navbar-expand-lg bg-transparent">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                            <img src="/img/image 3 1.png" alt="" width="194px" height="112px">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto  mb-2 mb-lg-0">
+                                <li class="nav-item me-3">
+                                    <a class="nav-link_active" aria-current="page" href="#">Цены прокат</a>
+                                </li>
+                                <li class="nav-item me-3">
+                                    <a class="nav-link" href="#">Акции</a>
+                                </li>
+                                <li class="nav-item me-3">
+                                    <a class="nav-link" href="#">Аренда<a>
+                                </li>
+                                <li class="nav-item me-3">
+                                    <a class="nav-link" href="#">Трасса</a>
+                                </li>
+                                <li class="nav-item me-3">
+                                    <a class="nav-link" href="#">Школа</a>
+                                </li>
+                                <li class="nav-item me-3">
+                                    <a class="nav-link" href="#">Гоночная команда</a>
+                                </li>
+                                <li class="nav-itemme-3">
+                                    <a class="nav-link" href="#">Продажа картингов</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
