--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
     </section>
     <footer>
         <div class="container">
-            <div class="footerNavigation">
-                <nav class="navbar navbar-expand-lg bg-transparent">
-                    <div class="container-fluid">
+            <div class="footerNavigation ">
+                <nav class="navbar navbar-expand-lg bg-transparent ">
+                    <div class="container-fluid ">
                         <a class="navbar-brand" href="#">
                             <img src="/img/image 3 1.png" alt="" width="194px" height="112px">
                         </a>
@@ -395,6 +395,13 @@
                     </div>
                 </nav>
             </div>
+            <div class="row">
+                <div class="col-md-3 footerlogo">
+                    It is a long established fact that a reader will be distracted
+                    by the readable content of a page when looking at its
+                    layout.
+                </div>
+                <div class="col-md-9"></div>
             </div>
             <div class="row">
                 <div class="col-md-6">
@@ -412,7 +419,7 @@
                 </div>
             </div>
         </div>
-
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
